--- a/build.gradle
+++ b/build.gradle
@@ -17,10 +17,10 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-cache'
-    implementation 'com.google.code.gson:gson'
     implementation group: 'com.squareup.okhttp3', name: 'okhttp', version: '4.12.0'
     implementation 'org.mongodb:mongodb-driver-sync:4.10.2'
     implementation 'org.mongodb:mongodb-driver-core:4.10.2'
+    implementation group: 'org.json', name: 'json', version: '20240303'
 
 }
 
