--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,11 @@ dependencies {
     implementation 'org.mongodb:mongodb-driver-sync:4.10.2'
     implementation 'org.mongodb:mongodb-driver-core:4.10.2'
     implementation group: 'org.json', name: 'json', version: '20240303'
+    implementation 'co.elastic.clients:elasticsearch-java:8.16.0'
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.17.0'
+
+    compileOnly group: 'org.projectlombok', name: 'lombok', version: '1.18.34'
+
 
 }
 
