--- a/build.gradle
+++ b/build.gradle
@@ -13,7 +13,6 @@ repositories {
 }
 
 dependencies {
-
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-cache'
@@ -23,12 +22,53 @@ dependencies {
     implementation group: 'org.json', name: 'json', version: '20240303'
     implementation 'co.elastic.clients:elasticsearch-java:8.16.0'
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.17.0'
-
     compileOnly group: 'org.projectlombok', name: 'lombok', version: '1.18.34'
-
-
 }
 
 tasks.withType(JavaCompile).configureEach {
     options.encoding = 'UTF-8'
 }
+
+springBoot {
+    mainClass.set("") // Явно очищает main-класс, чтобы Spring Boot не искал его
+}
+
+// Отключение bootJar
+tasks.named('bootJar') {
+    enabled = false
+}
+
+tasks.named('jar') {
+    enabled = true
+}
+
+// Настройка задач для каждого JAR
+task createParserJar(type: Jar) {
+    archiveBaseName.set("parser")
+    destinationDirectory.set(file("$buildDir/libs"))
+    manifest {
+        attributes 'Main-Class': 'parser.runners.ParserRunner'
+    }
+    from sourceSets.main.output
+}
+
+task createMongoLoaderJar(type: Jar) {
+    archiveBaseName.set("mongo-loader")
+    destinationDirectory.set(file("$buildDir/libs"))
+    manifest {
+        attributes 'Main-Class': 'collector.runners.DownloadVacanciesRunner'
+    }
+    from sourceSets.main.output
+}
+
+task createElasticLoaderJar(type: Jar) {
+    archiveBaseName.set("elastic-loader")
+    destinationDirectory.set(file("$buildDir/libs"))
+    manifest {
+        attributes 'Main-Class': 'elk.ElasticSearchRunner'
+    }
+    from sourceSets.main.output
+}
+
+// Добавление всех задач в зависимость от 'build'
+build.dependsOn createParserJar, createMongoLoaderJar, createElasticLoaderJar
