--- a/src/main/resources/mongo2019.properties
+++ b/src/main/resources/mongo2019.properties
@@ -1,4 +1,4 @@
-connection_url=mongodb://localhost:27017
+connection_url=mongodb://root:root@localhost:27017
 database=head-hunter
 collection=hh-api-answers_4
 start_id=29553401
