--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,43 +1,53 @@
 services:
   mongodb:
-    image: mongo
+    image: mongo:latest
     container_name: mongodb
-    restart: until-stopped
+    restart: unless-stopped
     environment:
       MONGO_INITDB_ROOT_USERNAME: root
-      MONGO_INITDB_ROOT_PASSWORD: example
+      MONGO_INITDB_ROOT_PASSWORD: root
     ports:
       - "27017:27017"
     volumes:
-      - ./data/mongodb:/data/db
+      - mongo_data:/data/db
 
   mongo-express:
     image: mongo-express
     container_name: mongo-express
-    restart: until-stopped
+    restart: unless-stopped
     ports:
       - 8081:8081
     environment:
       ME_CONFIG_MONGODB_ADMINUSERNAME: root
-      ME_CONFIG_MONGODB_ADMINPASSWORD: example
-      ME_CONFIG_MONGODB_URL: mongodb://root:example@mongo:27017/
-      ME_CONFIG_BASICAUTH: false
+      ME_CONFIG_MONGODB_ADMINPASSWORD: root
+      ME_CONFIG_MONGODB_URL: mongodb://root:root@mongodb:27017/
 
   elasticsearch:
-    image: elasticsearch
+    image: elasticsearch:8.16.1
     container_name: elasticsearch
     environment:
       - discovery.type=single-node
+      - "xpack.security.enabled=false"
     ports:
       - "9200:9200"
       - "9300:9300"
     volumes:
-      - ./data/elasticsearch:/usr/share/elasticsearch/data
+      - elastic_data:/usr/share/elasticsearch/data
+
+  kibana:
+    image: kibana:8.16.1
+    container_name: kibana
+    environment:
+      - ELASTICSEARCH_HOSTS=http://elasticsearch:9200
+    ports:
+      - "5601:5601"
+    depends_on:
+      - elasticsearch
 
   # Для запуска приложения используем команды:
-  # docker exec -it java-app run-parser
-  # docker exec -it java-app run-mongo-loader
-  # docker exec -it java-app run-elastic-loader
+  # docker exec -it java_app run-parser
+  # docker exec -it java_app run-mongo-loader
+  # docker exec -it java_app run-elastic-loader
   java-app:
     build:
       context: .
@@ -46,3 +56,7 @@ services:
     depends_on:
       - mongodb
       - elasticsearch
+
+volumes:
+  mongo_data:
+  elastic_data:
