--- a/src/main/resources/mongo2024.properties
+++ b/src/main/resources/mongo2024.properties
@@ -1,4 +1,4 @@
-connection_url=mongodb://root:root@localhost:27017
+connection_url=mongodb://root:root@mongodb:27017
 database=head-hunter
 collection=hh-api-answers_2
 start_id=90503480
