--- a/src/main/resources/mongoparse2019.properties
+++ b/src/main/resources/mongoparse2019.properties
@@ -1,3 +1,3 @@
-connection_url=mongodb://root:root@localhost:27017
+connection_url=mongodb://root:root@mongodb:27017
 database=head-hunter
 collection=hh-it-parse-vacancies-2019
