--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'java'
     id 'org.springframework.boot' version '3.3.4'
     id 'io.spring.dependency-management' version '1.1.6'
+    id 'com.github.johnrengelman.shadow' version '8.1.1'
 }
 
 group = 'com.headHunterAnalysis'
@@ -13,6 +14,7 @@ repositories {
 }
 
 dependencies {
+
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-cache'
@@ -22,7 +24,10 @@ dependencies {
     implementation group: 'org.json', name: 'json', version: '20240303'
     implementation 'co.elastic.clients:elasticsearch-java:8.16.0'
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.17.0'
+
     compileOnly group: 'org.projectlombok', name: 'lombok', version: '1.18.34'
+
+
 }
 
 tasks.withType(JavaCompile).configureEach {
